HL7 V2 1st draft

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -5,9 +5,86 @@
 \section{Πρωτόκολλα επικοινωνίας}
 
 
+	\subsection{Το πρότυπο Health Level Seven (HL7)}
+		\subsubsection{Ο Οργανισμός Health Level Seven (HL7)}
+		Το πρότυπο HL7 το οποίο έχει δημιουργηθεί από τον ομώνυμο οργανισμό Health Level Seven, ο οποίος αποτελεί μη κερδοσκοπικό οργανισμό με έτος ίδρυσης 1987 στις Ηνωμένες Πολιτείες της Αμερικής\cite{HL7Organization}\cite{blobel2003hl7}. Ο οργανισμός HL7 συστάθηκε με στόχο την δημιουργία παγκοσμίως αναγνωρισμένων και αξιόπιστων προτύπων για την ανταλλαγή ιατρικών δεδομένων μεταξύ ενδιαφερομένων φορέων στον τομέα της ιατρικής περίθαλψης. Τα δεδομένα αυτά αφορούν τόσο την κλινική φροντίδα των ασθενών όσο και το κομμάτι της διαχείρισης, οργάνωσης, αξιολόγησης και επέκτασης των υπηρεσιών Ιατρικής φροντίδας.
 
-	\subsection{HL7 messaging v2 και v3}
-
+Ο μη κερδοσκοπικός οργανισμός Health Level Seven αποτελεί έναν από τους βασικότερους φορείς για τη διασφάλιση και διαλειτουργικότητα, μεταξύ των συστημάτων παροχής υπηρεσιών Ηλεκτρονικής Ιατρικής Φροντίδας (e-health). Αριθμεί πολυποίκιλα μέλη σε περισσότερες από 55 χώρες μεταξύ των οποίων δημόσιους και ιδιωτικούς φορείς Υγείας, εταιρείες παροχής Ιατρικού λογισμικού, εταιρείες παροχής Ιατρικού εξοπλισμού, ειδικούς συμβούλους, εμπειρογνώμονες, ασφαλιστικούς φορείς κτλ\cite{HL7Organization}. Είναι δεδομένο άλλωστε ότι ο χώρος της Υγείας περιλαμβάνει αρκετούς ενδιαφερόμενους φορείς, καθιστώντας απαραίτητη τη χρήση προτύπων και αντίστοιχων αρχιτεκτονικών κατευθύνσεων ώστε να επιτευχθεί η διαλειτουργικότητα σε ένα ενοποιημένο σύστημα Ηλεκτρονικής Υγείας στο οποίο θα συμμετέχουν οι εμπλεκόμενοι φορείς, ο καθένας με το δικό του ρόλο. Επίσης αξίζει να σημειωθεί ότι έχει ο οργανισμός HL7 έχει τοπικά υποκαταστήματα σε όλες σχεδόν τις χώρες της Ευρώπης, στην Αυστραλία - Νέα Ζηλανδία, στην Ασία, στις Ηνωμένες Πολιτείες της Αμερικής και στη ζώνη του Ειρηνικού. Στην Ελλάδα ιδρύθηκε και λειτουργεί από το 2003 το παράρτημα (μη κερδοσκοπικού χαρακτήρα) του διεθνούς οργανισμού Health Level Seven (HL7) με την επωνυμία "HL7 Hellas". Ο ιδρυτικός πυρήνας περιλαμβάνει δεκαπέντε (15) διακεκριμένα ονόματα φορέων τόσο από τον Πανεπιστημιακό όσο και από τον χώρο των εταιριών Ιατρικής Πληροφορικής και Τεχνολογίας\cite{HL7Hellas}.
+		\subsubsection{Το πρότυπο HL7, έκδοση 2}
+		Το πιο ευρέως χρησιμοποιούμενο πρότυπο επικοινωνίας και διαλειτουργικότητας συστημάτων Ηλεκτρονικής Υγείας (healthcare interoperability standard) είναι η έκδοση 2 του προτύπου HL7 (HL7 v2). Χαρακτηριστικό παράδειγμα αποτελεί η περίπτωση των Ηνωμένων Πολιτειών της Αμερικής στις οποίες βρίσκει χρήση σε ποσοστό 95\% των νοσοκομειακών συστημάτων\cite{benson2012principles}.
+		
+		Η έκδοση 2 του προτύπου HL7 εισήχθηκε τον Οκτώβριο του 1987, μόλις ένα χρόνο μετά την εμφάνιση της έκδοσης 1 και βρίσκεται υπό συνεχή ανάπτυξη εδώ και πάνω από 25 χρόνια. Τη στιγμή της συγγραφής της παρούσας διπλωματικής εργασίας, τελευταία έκδοση του HL7 V2 είναι η 2.7, η οποία έλαβε και έγκριση ως πρότυπο ANSI το έτος 2011\cite{HL7Version27}. Η έκδοση αυτή ορίζει διάφορους τύπους ηλεκτρονικών μηνυμάτων για την υποστήριξη διοικητικών, λογιστικών, οικονομικών, καθώς και ιατρικών διαδικασιών. Μία από τις βασικές απαιτήσεις κατά την εξέλιξη του HL7 V2 είναι η διασφάλιση ότι τα μηνύματα που έχουν δημιουργηθεί βάσει παλαιότερων εκδόσεων συνεχίζουν να είναι έγκυρα σε περιβάλλοντα που έχουν εφαρμόσει νεότερες εκδόσεις του προτύπου, οι οποίες έχουν σχεδιαστικά προσθετικά των προηγούμενων (backward compatibility). Για παράδειγμα μια εφαρμογή η οποία αποκωδικοποιεί μηνύματα της έκδοσης 2.5 πρέπει να είναι σε θέση να αποκωδικοποιήσει και μηνύματα της έκδοσης 2.4. Οι κύριοι λόγοι για τους οποίους οι παλαιότερες εκδόσεις του HL7 V2 χρησιμοποιούνται ακόμα σε τόσο μεγάλο βαθμό είναι οι παρακάτω:
+		\begin{enumerate}
+			\item Δεν υπάρχει ιδιαίτερο κίνητρο για αναβάθμιση δεδομένου ότι το όφελος από την επένδυση για αντικατάσταση της υπάρχουσας διεπαφής με κάποια καινούργια είναι αρκετά χαμηλό (low return on investment).
+			\item Δεδομένου της ευαίσθητης φύσης αλλά και της απαίτησης συνεχούς λειτουργίας (100\% uptime) των συστημάτων υγείας, το ρίσκο αποτυχίας της αλλαγής λειτουργεί συνήθως ως αποτρεπτικός παράγοντας.
+		\end{enumerate}		 
+		
+		Αν και όπως προαναφέραμε το πρότυπο HL7 V2 χρήζει ευρείας αποδοχής δεν είναι χωρίς τα ελαττώματα του, συγκεκριμένα\cite{bourquard2015standards}:
+		\begin{enumerate}
+			\item Δεν υπάρχει κάποιο σαφώς καθορισμένο μοντέλο αναφοράς της πληροφορίας που ανταλλάσσεται μέσω των μηνυμάτων αλλά ούτε και τρόπος να αναπαρασταθεί η σχέση μεταξύ των δεδομένων.
+			\item Χρησιμοποιεί μια εξαιρετικά εδική σύνταξη στα μηνύματα με άμεσο αποτέλεσμα να είναι ιδιαιτέρως δύσκολη η εκμάθηση αλλά και η υλοποίηση του προτύπου.
+			\item Αν και τα πολλά προαιρετικά χαρακτηριστικά που διαθέτει του παρέχουν μεγάλο βαθμό ευελιξίας, δημιουργούν προβλήματα ως προς τον έλεγχο της συμμόρφωσης προς το πρότυπο των διαφόρων υλοποιήσεων. Ως άμεσο αποτέλεσμα χρήζει μεγάλης προσπάθειας η εξασφάλιση ότι δύο εφαρμογές που θα επικοινωνήσουν μεταξύ τους, κάνουν χρήση των ίδιων χαρακτηριστικών.
+		\end{enumerate}
+		
+		Τα μηνύματα HL7 V2 αποτελούνται από μια ορισμένη σειρά τμημάτων (segments). Κάθε τμήμα περιέχει κάποια πεδία τα οποία είναι επίσης σε κάποια προκαθορισμένη σειρά. Κάθε πεδίο έχει προκαθορισμένους τύπους δεδομένων (data types), ο οποίοι μπορεί να είναι οι ακόλουθοι\cite{dolin2001hl7}:
+		\begin{itemize}
+			\item Απλός τύπος μιας τιμής, παραδείγματος χάριν text ή date.
+			\item Σύνθετος τύπος δεδομένων ο οποίος αποτελείται από πολλαπλά επί μέρους συστατικά (components). Κάθε συστατικό έχει έναν δικό του προκαθορισμένο τύπο δεδομένων ο οποίος με τη σειρά του μπορεί να είναι επίσης απλός ή σύνθετος τύπος δεδομένων. Καθαυτό τον τρόπο οδηγούμαστε στην δημιουργία υποσυστατικών (subcomponents).
+		\end{itemize}
+		
+		Τα μηνύματα του προτύπου HL7 v2 μεταφέρονται με την πυροδότηση κάποιου γεγονότος. Κάθε μήνυμα αντιστοιχείται σε κάποια γενική κατηγορία, εντός της οποίας ανήκει. Παραδείγματος χάριν, τα μηνύματα τα οποία έχουν σχέση με την διαχείριση των ασθενών ανήκουν στην κατηγορία "ADT" (από τα αρχικά των λέξεων admission, discharge, transfer). Παρακάτω στον πίνακα \ref{tab:HL7_V2_message_types} με κάποια παραδείγματα τύπων μηνυμάτων:
+		
+	\begin{table}[h]
+		\begin{center}
+		    \begin{tabular}{|l|l|}
+		    \hline
+		    \rowcolor{grayy}
+		    \textbf{Τιμή} & \textbf{Περιγραφή}
+		    \\ \hline
+		     ACK & Μήνυμα επιβεβαίωσης (acknowledge)
+		     \\ \hline
+		     ADT & Μήνυμα για τη διαχείριση των ασθενών
+		     \\ \hline
+		     BTS & Μετάγγιση αίματος (Blood product transfusion)
+		     \\ \hline
+		     PIN & Πληροφορίες ασφάλισης ασθενούς (Patient insurance information)
+		     \\ \hline
+		    \end{tabular}
+		    \caption{Παραδείγματα τύπων μηνυμαων HL7 V2}
+			\label{tab:HL7_V2_message_types}
+		\end{center}
+	\end{table}
+	
+	Όπως προαναφέρθηκε παραπάνω πριν την δημιουργία κάποιου μηνύματος θα πρέπει να έχει προηγηθεί κάποιο γεγονός πυροδότησης. Κάθε γεγονός πυροδότησης ανήκει σε κάποιον τύπο μηνύματος. Για παράδειγμα στον τύπο μηνύματος ADT ανήκει το γεγονός A01 το οποίο αναφέρεται στην εισαγωγή ή επίσκεψη του ασθενή και το Α02 το οποίο αναφέρεται στην μεταφορά του ασθενή. Για να επιτευχθεί ο πλήρης καθορισμός ενός μηνύματος θα πρέπει να γίνει συνδυασμός τόσο του τύπου μηνύματος όσο και του γεγονότος πυροδότησης. Βάση των παραδειγμάτων που έχουμε αναφέρει παραπάνω, ένα πλήρες όνομα μηνύματος θα ήταν το $ADT^A02$. Ο χαρακτήρας $"^"$ χρησιμοποιείται έτσι ώστε να διαχωρίσουμε τα διάφορα συστατικά ενός πεδίου. Δεδομένου της υψηλής σημασίας που παίζουν οι χαρακτήρες οριοθέτησης στην σωστή αποκωδικοποίηση και δημιουργία του μηνύματος, παρουσιάζουμε στον πίνακα \ref{tab:HL7_delimeters} τους χαρακτήρες οριοθέτησης:
+	
+	\begin{table}[h]
+		\begin{center}
+		    \begin{tabular}{|c|l|}
+		    \hline
+		    \rowcolor{grayy}
+		    \textbf{Χαρακτήρας} & \textbf{Χρήση}
+		    \\ \hline
+		     | & Διαχωρισμός πεδίων
+		     \\ \hline
+		     \^{} & Διαχωρισμός συστατικών
+		     \\ \hline
+		     \~{} & Διαχωρισμός επαναλήψεων
+		     \\ \hline
+		     \textbackslash & Χαρακτήρας διαφυγής
+		     \\ \hline
+		     \& & Διαχωρισμός υποσυστατικών
+		     \\ \hline
+		     $<CR>$ & Τερματισμός τμημάτων
+		     \\ \hline
+		    \end{tabular}
+		    \caption{Χαρακτήρες οριοθέτησης του προτύπου HL7 V2}
+			\label{tab:HL7_delimeters}
+		\end{center}
+	\end{table}
+	
+	\textbf{ΠΙΝΑΚΕΣ ΓΙΑ HL7 V2}
+		
+		\subsubsection{Το πρότυπο HL7, έκδοση 3}
 	\subsection{CDA Documents}
 	
 
