--- a/references.bib
+++ b/references.bib
@@ -214,6 +214,13 @@
   Timestamp                = {2015.10.10}
 }
 
+@Book{benson2012principles,
+  Title                    = {Principles of health interoperability HL7 and SNOMED},
+  Author                   = {Benson, Tim},
+  Publisher                = {Springer Science},
+  Year                     = {2012}
+}
+
 @InCollection{bertino1997object,
   Title                    = {Object-oriented databases},
   Author                   = {Bertino, Elisa and Ooi, Beng Chin and Sacks-Davis, Ron and Tan, Kian-Lee and Zobel, Justin and Shidlovsky, Boris and Catania, Barbara},
@@ -221,6 +228,17 @@
   Publisher                = {Springer},
   Year                     = {1997},
   Pages                    = {1--38}
+}
+
+@Article{blobel2003hl7,
+  Title                    = {HL7--more than a communications standard},
+  Author                   = {Blobel, B and Pharow, P},
+  Journal                  = {Advanced Health Telematics and Telemedicine: The Magdeburg Expert Summit Textbook},
+  Year                     = {2003},
+  Pages                    = {266},
+  Volume                   = {96},
+
+  Publisher                = {IOS Press}
 }
 
 @Article{Blumenthal2009,
@@ -1030,6 +1048,18 @@ Timothy Grance},
   Pages                    = {405--418}
 }
 
+@Electronic{HL7Hellas,
+  Title                    = {Who we are},
+  Author                   = {HL7 Hellas},
+  HowPublished             = {http://www.hl7.org.gr/en/content/who-we-are},
+  Language                 = {English},
+  Organization             = {HL7 Hellas},
+  Url                      = {http://www.hl7.org.gr/en/content/who-we-are},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.19}
+}
+
 @Electronic{hematologyBasics,
   Title                    = {Blood Basics},
   Author                   = {American Society of Hemology},
@@ -1038,6 +1068,16 @@ Timothy Grance},
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.04}
+}
+
+@Electronic{HL7Version27,
+  Title                    = {HL7 Messaging Standard Version 2.7},
+  Author                   = {HL7},
+  Organization             = {HL7},
+  Url                      = {http://www.hl7.org/implement/standards/product_brief.cfm?product_id=146},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.19}
 }
 
 @Book{Jacobson,
@@ -1682,6 +1722,17 @@ Technology},
   Timestamp                = {2015.10.11}
 }
 
+@Electronic{HL7Organization,
+  Title                    = {Health Level Seven International},
+  Author                   = {Health Level Seven},
+  HowPublished             = {http://www.hl7.org/},
+  Organization             = {Health Level Seven},
+  Url                      = {http://www.hl7.org/},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.19}
+}
+
 @Article{shaver2007impact,
   Title                    = {Impact of the social media on Consumer Behavior in the United},
   Author                   = {Shaver, Dan},
@@ -1997,3 +2048,22 @@ URN: urn:nbn:de:0114-fqs0501297},
   Date-modified            = {2015-10-03 18:50:17 +0000}
 }
 
+@incollection{bourquard2015standards,
+  title={Standards for Interoperability in Digital Health: Selection and Implementation in an eHealth Project},
+  author={Bourquard, Karima and Le Gall},
+  booktitle={Requirements Engineering for Digital Health},
+  pages={95--115},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{dolin2001hl7,
+  title={The HL7 clinical document architecture},
+  author={Dolin, Robert H and Alschuler, Liora and Beebe},
+  journal={Journal of the American Medical Informatics Association},
+  volume={8},
+  number={6},
+  pages={552--569},
+  year={2001},
+  publisher={The Oxford University Press}
+}
