Interoperability - design and architecture of Eligibility as a Service

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -274,8 +274,59 @@
 		Μία επιπλέον πολύ σημαντική παράμετρος αποτελεί το ποσοστό επιστροφής των εθελοντών αιμοδοτών μετά από μία προσωρινή απόρριψη. Μελέτες έχουν δείξει ότι οι περισσότεροι εθελοντές δεν επιστρέφουν αν απορριφθούν μία φορά. Πιο συγκεκριμένα, ..... %να διαβασω papers 
 	
 		
+	\subsection{Decision Support Systems \& Clinical Decision Support}
+		
+		Ένα σύστημα υποστήριξης λήψης αποφάσεων (DSS) είναι ένα πληροφοριακό σύστημα πληροφοριών βασισμένο σε υπολογιστικά συστήματα το οποίο υποστηρίζει την οργάνωση των δραστηριοτήτων λήψης αποφάσεων. Τα DSS εξυπηρετούν τη διαχείριση, τη λειτουργία και τα επίπεδα σχεδιασμού ενός συστήματος ή οργανισμού. Τα συστήματα υποστήριξης λήψης αποφάσεων μπορεί να είναι είτε πλήρως μηχανογραφημένα, είτε να διαχειρίζονται από ανθρώπινο δυναμικό  ή να αποτελούν συνδυασμό και των δύο. \cite{miller}
+		
+		Τα συστήματα υποστήριξης λήψης κλινικών αποφάσεων (CDS) παρέχουν στους κλινικούς γιατρούς, στο προσωπικό, στους ασθενείς, και σε άλλα άτομα με γνώσεις σχετικές με αντικείμενα του τομέα υγείας, υποστήριξη στα κλινικά καθήκοντα τα οποία είναι συσχετισμένα με την διαδικασία απόφασης, με σκοπό  την ενίσχυση της υγείας και της υγειονομικής περίθαλψης.\cite{clinicalDecision} Ένα σύστημα υποστήριξης κλινικών αποφάσεων, ορίζεται ως ένα ``ενεργό σύστημα γνώσης, το οποίο χρησιμοποιεί δύο ή περισσότερες κατηγορίες δεδομένων του ασθενούς για να δημιουργήσει εξειδικευμένες συμβουλές". Ένα CDS σύστημα είναι απλά ένα σύστημα υποστήριξης αποφάσεων που επικεντρώνεται στην διαχείριση της γνώσης με τέτοιο τρόπο ώστε να παρέχει αξιόπιστες κλινικές συμβουλές, αλλά ο γιατρός είναι αυτός που παίρνει τις τελικές αποφάσεις. \cite{miller}
+		
+		Στην παρούσα διπλωματική μας ενδιαφέρουν τα CDS συστήματα τα οποία στηρίζονται σε γνώση, δηλαδή τα συστήματα γνώσης. Τα συστήματα αυτά αποτελούνται από τρία μέρη: τη βάση των γνώσεων, έναν μηχανισμό εξαγωγής συμπερασμάτων, και ένα μηχανισμό επικοινωνίας. Η βάση γνώσης περιέχει τους κανόνες και τις συσχετίσεις των στοιχείων που συγκεντρώνονται σε αυτήν, που συνήθως παίρνουν τη μορφή του κανόνες IF-THEN. Το σύστημα συμπερασμού συνδυάζει τους κανόνες από τη βάση της γνώσης με τα δεδομένα. Ο μηχανισμός επικοινωνίας επιτρέπει στο σύστημα να δείχνει τα αποτελέσματα που προκύπτουν στον αιτούντα.
+		
+\section{Υλοποίηση}
+
+
+		Στόχος είναι η υλοποίηση μίας υπηρεσίας, η οποία θα τρέχει σε cloud και θα κάνει έναν πρωταρχικό έλεγχο σχετικά με το αν ο εθελοντής επιτρέπεται να αιμοδοτήσει ή όχι. Η υπηρεσία εξετάζει την καταλληλότητα του εθελοντή, με βάση το ιατρικό ιστορικό του. Αντλώντας δεδομένα από τον ηλεκτρονικό ιατρικό του φάκελο και την ηλεκτρονική συνταγογράφηση εξετάζει αν υπάρχουν διαγνώσεις ή συνταγογραφήσεις, οι οποίες παραβιάζουν τα κριτήρια επιλεξιμότητας. Η υπηρεσία ανακτά τα δεδομένα που χρειάζεται για τους ελέγχους της με σύνδεση στο σύστημα epSOS, κάνοντας χρήση του ΑΜΚΑ του συγκεκριμένου εθελοντή.
+		
+		Τα κριτήρια επιλεξιμότητας, τα οποία προκύπτουν με βάση τις οδηγίες του WHO, \cite{safety} που ελέγχει το σύστημα μας είναι τα εξής.
+		
+		%να τα γραψω
+		
+		Με βάση τα άνωθεν, το ιατρικό ιστορικό του ασθενούς και την κατάλληλη παραμετροποίηση, ο αλγόριθμος που τρέχει αποφαίνεται για το αν ο ασθενής είναι κατάλληλος ή όχι για αιμοδοσία. Όπως είδαμε για τα CDS (Clinical Decision Support) συστήματα, το σύστημα επιστρέφει την πρόταση του σχετικά με το αν πρέπει να απορριφθεί ή όχι ο ασθενής και την αναφορά των ευρημάτων του αλλά ο γιατρός είναι αυτός ο οποίος καταλήγει στην τελική απόφαση έγκρισης ή απόρριψης του ασθενούς. Το σύστημα χρησιμοποιεί προκαθορισμένους κανόνες, ενώ προσαρμόζει την βάση γνώσης στα ιατρικά δεδομένα που αντλεί για τον συγκεκριμένο ασθενή που εξετάζεται.
+	
+		
+	\subsubsection{Αρχιτεκτονική και Σχεδιασμός}
+		
+		Τα στοιχεία που χρησιμοποιούνται στην δημιουργία του Eligibility as a Service είναι τα εξής:
+		
+		\begin{itemize}
+		
+		\item το CDS σύστημα, το οποίο βρίσκεται σε ένα ιδιωτικό νέφος (cloud).
+
+		\item Το ``ΣΥΖΕΥΞΙΣ", το οποίο είναι ένα έργο του Υπουργείου Διοικητικής Μεταρρύθμισης \& Ηλεκτρονικής Διακυβέρνησης (ΥΔΜΗΔ), με το οποίο επιδιώκεται η ανάπτυξη και ο εκσυγχρονισμός της τηλεπικοινωνιακής υποδομής του Δημόσιου Τομέα. Αποτελεί  ένα δίκτυο πρόσβασης και κορμού για τους φορείς του Δημοσίου, με σκοπό να καλύψει όλες τις ανάγκες για τη μεταξύ τους επικοινωνία με  Τηλεφωνία (τηλεφωνική επικοινωνία ανάμεσα στους φορείς). Θα χρησιμοποιηθεί για να εξασφαλίσουμε την ασφαλή πρόσβαση στα ιατρικά δεδομένα των ασθενών.
+		
+		\item Το κέντρο δεδομένων (data center), της ΗΔΙΚΑ (Ηλεκτρονική Διακυβέρνηση Κοινωνικής Ασφάλισης Α.Ε.), στο οποίο στεγάζονται τα δεδομένα του e-prescription και το patient record.
+		
+
+		\item CDA(epsos) πρωτόκολλο επικοινωνίας, για την μεταφορά των ιατρικών απαιτούμενων δεδομένων από την ΗΔΙΚΑ στο CDS σύστημα.
+			
+		\end{itemize}				
+		
+		
+		%να φτιαξω σχημα
+		
+		Τα δεδομένα της ηλεκτρονικής συνταγογράφησης και του ηλεκτρονικού ιατρικού φακέλου του ασθενούς βρίσκονται στο κέντρο δεδομένων (data center) της ΗΔΙΚΑ. Για να προσπελαστούν τα δεδομένα με ασφάλεια, χρησιμοποιούμε ασφαλή πρόσβαση μέσω του συστήματος ΣΥΖΕΥΞΙΣ. Τα δεδομένα που στέλνονται από το patient record και το e-prescription μορφοποιούνται σε κατάλληλα CDA documents, με τις επιπλέον προτυποποίησεις που προτείνει το epSOS για να αποσταλούν στο CDS σύστημα.
+		
+		Το επιτυχές σενάριο χρήσης είναι το εξής: Ο εγκεκριμένος γιατρός εκκινεί το Eligibility as a Service. Πληκτρολογεί στο σύστημα το ΑΜΚΑ του εθελοντή και ανακατευθύνεται ώστε να συνδεθεί, με χρήση των κωδικών του και μέσω της ασφαλής πρόσβασης που εξασφαλίζει το ΣΥΖΕΥΞΙΣ, στο e-prescription και στο patient record. Το σύστημα ``τραβά" τα δεδομένα που χρειάζεται και με βάση τους κανόνες παραγωγής καταλήγει αν ο αιμοδότης τηρεί τα κριτήρια καταλληλότητας ή όχι. Η σύνδεση με το e-prescription και το patient record τερματίζεται, αντίγραφο των δεδομένων δεν διατηρείται και το σύστημα επιστρέφει στον γιατρό την απόφαση του μαζί με την κατάλληλη αναφορά. Στο σημείο αυτό, να τονίσουμε ότι το σύστημα συμπεριφέρεται σαν ``μαύρο κουτί", γεγονός που μας επιτρέπει να χρησιμοποιήσουμε τα ευαίσθητα ιατρικά δεδομένα χωρίς να χρειάζεται να εφαρμόσουμε ανωνυμοποίηση τους (anonymization) και χωρίς να παραβιάζουμε την Αρχή Προστασίας Δεδομένων Προσωπικού Χαρακτήρα. 
 		
 		
 		
 		
-\section{Δοκιμές}
+		
+		
+		
+		
+		
+		
+		
+		
+		
