--- a/references.bib
+++ b/references.bib
@@ -167,6 +167,23 @@
   Timestamp                = {2015.10.12}
 }
 
+@Article{AX2005,
+  Title                    = {Effects of computerized clinical decision support systems on practitioner performance and patient outcomes: A systematic review},
+  Author                   = {Garg AX and Adhikari NJ and McDonald H and et al},
+  Journal                  = {JAMA},
+  Year                     = {2005},
+  Number                   = {10},
+  Pages                    = {1223-1238},
+  Volume                   = {293},
+
+  __markedentry            = {[revekka:6]},
+  Doi                      = {10.1001/jama.293.10.1223},
+  Eprint                   = {/data/Journals/JAMA/4967/JRV50002.pdf},
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.20},
+  Url                      = { + http://dx.doi.org/10.1001/jama.293.10.1223}
+}
+
 @Book{banker2011mongodb,
   Title                    = {MongoDB in action},
   Author                   = {Banker, Kyle},
@@ -658,8 +675,6 @@
   Number                   = {12},
   Pages                    = {2026--2027},
   Volume                   = {5},
-
-  __markedentry            = {[revekka:]},
   Acmid                    = {2367568},
   Doi                      = {10.14778/2367502.2367568},
   ISSN                     = {2150-8097},
@@ -682,7 +697,7 @@
   Pages                    = {2026--2027},
   Volume                   = {5},
 
-  __markedentry            = {[revekka:6]},
+  __markedentry            = {[revekka:]},
   Acmid                    = {2367568},
   Doi                      = {10.14778/2367502.2367568},
   ISSN                     = {2150-8097},
@@ -1219,6 +1234,24 @@ Timothy Grance},
   Owner                    = {revekka},
   Publisher                = {IEEE Computer Society},
   Timestamp                = {2015.10.13}
+}
+
+@Article{decision,
+  Title                    = {Decision support systems : a research perspective},
+  Author                   = {Keen, Peter G. W.},
+  Journal                  = {Cambridge, Mass. : Center for Information Systems Research, Afred P. Sloan School of Management},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.20}
+}
+
+@Article{clinicalDecision,
+  Title                    = {Ιmproving clinical practice using clinical decision support systems: a systematic review of trials to identify features critical to success},
+  Author                   = {Kensaku Kawamoto,Caitlin A Houlihan, E Andrew Balas, David F Lobach},
+  Year                     = {2005},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.20}
 }
 
 @Article{Kierkegaard2013,
