Minor bibliography fix

--- a/references.bib
+++ b/references.bib
@@ -333,6 +333,15 @@
   Url                      = {http://dx.doi.org/10.1002/asi.22634}
 }
 
+@InCollection{bourquard2015standards,
+  Title                    = {Standards for Interoperability in Digital Health: Selection and Implementation in an eHealth Project},
+  Author                   = {Bourquard, Karima and Le Gall},
+  Booktitle                = {Requirements Engineering for Digital Health},
+  Publisher                = {Springer},
+  Year                     = {2015},
+  Pages                    = {95--115}
+}
+
 @Electronic{whiteBloodCells,
   Title                    = {What Are White Blood Cells},
   Author                   = {Bowers},
@@ -675,6 +684,7 @@
   Number                   = {12},
   Pages                    = {2026--2027},
   Volume                   = {5},
+
   Acmid                    = {2367568},
   Doi                      = {10.14778/2367502.2367568},
   ISSN                     = {2150-8097},
@@ -707,6 +717,18 @@
   Publisher                = {VLDB Endowment},
   Timestamp                = {2015.10.16},
   Url                      = {http://dx.doi.org/10.14778/2367502.2367568}
+}
+
+@Article{dolin2001hl7,
+  Title                    = {The HL7 clinical document architecture},
+  Author                   = {Dolin, Robert H and Alschuler, Liora and Beebe},
+  Journal                  = {Journal of the American Medical Informatics Association},
+  Year                     = {2001},
+  Number                   = {6},
+  Pages                    = {552--569},
+  Volume                   = {8},
+
+  Publisher                = {The Oxford University Press}
 }
 
 @Article{Dudley2010,
@@ -1247,7 +1269,7 @@ Timothy Grance},
 
 @Article{clinicalDecision,
   Title                    = {Ιmproving clinical practice using clinical decision support systems: a systematic review of trials to identify features critical to success},
-  Author                   = {Kensaku Kawamoto,Caitlin A Houlihan, E Andrew Balas, David F Lobach},
+  Author                   = {Kensaku Kawamoto,Caitlin A Houlihan},
   Year                     = {2005},
 
   Owner                    = {revekka},
@@ -2081,22 +2103,3 @@ URN: urn:nbn:de:0114-fqs0501297},
   Date-modified            = {2015-10-03 18:50:17 +0000}
 }
 
-@incollection{bourquard2015standards,
-  title={Standards for Interoperability in Digital Health: Selection and Implementation in an eHealth Project},
-  author={Bourquard, Karima and Le Gall},
-  booktitle={Requirements Engineering for Digital Health},
-  pages={95--115},
-  year={2015},
-  publisher={Springer}
-}
-
-@article{dolin2001hl7,
-  title={The HL7 clinical document architecture},
-  author={Dolin, Robert H and Alschuler, Liora and Beebe},
-  journal={Journal of the American Medical Informatics Association},
-  volume={8},
-  number={6},
-  pages={552--569},
-  year={2001},
-  publisher={The Oxford University Press}
-}
