HL7 V2 Final Draft - (Needs proof-read from rev)

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -32,8 +32,7 @@
 			\item Σύνθετος τύπος δεδομένων ο οποίος αποτελείται από πολλαπλά επί μέρους συστατικά (components). Κάθε συστατικό έχει έναν δικό του προκαθορισμένο τύπο δεδομένων ο οποίος με τη σειρά του μπορεί να είναι επίσης απλός ή σύνθετος τύπος δεδομένων. Καθαυτό τον τρόπο οδηγούμαστε στην δημιουργία υποσυστατικών (subcomponents).
 		\end{itemize}
 		
-		Τα μηνύματα του προτύπου HL7 v2 μεταφέρονται με την πυροδότηση κάποιου γεγονότος. Κάθε μήνυμα αντιστοιχείται σε κάποια γενική κατηγορία, εντός της οποίας ανήκει. Παραδείγματος χάριν, τα μηνύματα τα οποία έχουν σχέση με την διαχείριση των ασθενών ανήκουν στην κατηγορία "ADT" (από τα αρχικά των λέξεων admission, discharge, transfer). Παρακάτω στον πίνακα \ref{tab:HL7_V2_message_types} με κάποια παραδείγματα τύπων μηνυμάτων:
-		
+		Τα μηνύματα του προτύπου HL7 v2 μεταφέρονται με την πυροδότηση κάποιου γεγονότος. Κάθε μήνυμα αντιστοιχείται σε κάποια γενική κατηγορία, εντός της οποίας ανήκει. Παραδείγματος χάριν, τα μηνύματα τα οποία έχουν σχέση με την διαχείριση των ασθενών ανήκουν στην κατηγορία "ADT" (από τα αρχικά των λέξεων admission, discharge, transfer). Παρακάτω στον πίνακα \ref{tab:HL7_V2_message_types} με κάποια παραδείγματα τύπων μηνυμάτων:	
 	\begin{table}[h]
 		\begin{center}
 		    \begin{tabular}{|l|l|}
@@ -56,8 +55,7 @@
 	\end{table}
 	
 	Όπως προαναφέρθηκε παραπάνω πριν την δημιουργία κάποιου μηνύματος θα πρέπει να έχει προηγηθεί κάποιο γεγονός πυροδότησης. Κάθε γεγονός πυροδότησης ανήκει σε κάποιον τύπο μηνύματος. Για παράδειγμα στον τύπο μηνύματος ADT ανήκει το γεγονός A01 το οποίο αναφέρεται στην εισαγωγή ή επίσκεψη του ασθενή και το Α02 το οποίο αναφέρεται στην μεταφορά του ασθενή. Για να επιτευχθεί ο πλήρης καθορισμός ενός μηνύματος θα πρέπει να γίνει συνδυασμός τόσο του τύπου μηνύματος όσο και του γεγονότος πυροδότησης. Βάση των παραδειγμάτων που έχουμε αναφέρει παραπάνω, ένα πλήρες όνομα μηνύματος θα ήταν το $ADT^A02$. Ο χαρακτήρας $"^"$ χρησιμοποιείται έτσι ώστε να διαχωρίσουμε τα διάφορα συστατικά ενός πεδίου. Δεδομένου της υψηλής σημασίας που παίζουν οι χαρακτήρες οριοθέτησης στην σωστή αποκωδικοποίηση και δημιουργία του μηνύματος, παρουσιάζουμε στον πίνακα \ref{tab:HL7_delimeters} τους χαρακτήρες οριοθέτησης:
-	
-	\begin{table}[h]
+	\begin{table}[H]
 		\begin{center}
 		    \begin{tabular}{|c|l|}
 		    \hline
@@ -82,8 +80,22 @@
 		\end{center}
 	\end{table}
 	
-	\textbf{ΠΙΝΑΚΕΣ ΓΙΑ HL7 V2}
-		
+	Για να επιτευχθεί καλύτερη κατανόηση των παραπάνω κρίνεται σκόπιμο να συμπεριλάβουμε και κάποια σχηματική αναπαράσταση. Στο σχήμα \ref{fig:HL7_V2_concepts} βλέπουμε τα βασικά στοιχεία του προτύπου HL7 V2 ενώ στο σχήμα \ref{fig:HL7_V2_data_types} βλέπουμε αναλυτικά τους τύπους δεδομένους που υποστηρίζει.
+	
+	\begin{figure}[H]
+	    \centering
+	    \includegraphics[width=1\textwidth]{HL7_V2_concepts.jpg}
+	    \caption{Βασικές αρχές του προτύπου HL7 V2}
+	    \label{fig:HL7_V2_concepts}
+	\end{figure}
+\newpage
+	\begin{figure}[H]
+	    \centering
+	    \includegraphics[width=1\textwidth]{HL7_V2_data_types.jpg}
+	    \caption{Τύποι δεδομένων του προτύπου HL7 V2}
+	    \label{fig:HL7_V2_data_types}
+	\end{figure}
+			
 		\subsubsection{Το πρότυπο HL7, έκδοση 3}
 	\subsection{CDA Documents}
 	
