HL7 V3 - Final Draft (needs proof-reading)

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -97,6 +97,60 @@
 	\end{figure}
 			
 		\subsubsection{Το πρότυπο HL7, έκδοση 3}
+		Σκοπός της έκδοσης 3 του προτύπου HL7 είναι η υποστήριξη των ροών εργασίας σε όλο το φάσμα της Υγειονομικής Περίθαλψης. Η ανάπτυξη της ξεκίνησε το έτος 1995 και διήρκεσε 10 χρόνια, δεδομένου ότι μπήκε στην `αγορά' εν έτη 2005. Υιοθέτησε μια διαφορετική προσέγγιση σε σχέση με τον προκάτοχο του, αφού βασίστηκε σε αντικειμενοστραφή λογική ενώ προσπάθησε παράλληλα και να περιορίσει την ευελιξία που υπήρχε στην έκδοση 2 με βασικό στόχο να εξαλείψει τα μειονεκτήματα τα οποία συνόδευαν την ευελιξία αυτή\cite{HL7V3ProductSuite}.
+		
+		Η πιο βασική διαφοροποίηση της εν λόγω έκδοσης αποτελεί το μοντέλο RIM (Reference Information Model), το οποίο πηγάζει από την αντικειμενοστραφή λογική που έχει υιοθετηθεί\cite{HL7RIM}. Το μοντέλο RIM περιγράφει τις κλάσεις που ανήκουν στο RIM και μπορούν να αναπαραστήσουν το σύνολο των μηνυμάτων HL7 V3, τις σχέσεις μεταξύ τους, το μοντέλο καταστάσεων και τα πεδία της εκάστοτε κλάσης. Παρέχει μια ρητή αναπαράσταση των σημασιολογικών και λεκτικών συνδέσμων μεταξύ της πληροφορίας στα πεδία των μηνυμάτων του HL7. Σύμφωνα με τον οργανισμό HL7 το μοντέλο αυτό προσφέρει υψηλή ακρίβεια και βοηθάει σημαντικά στην μείωση του κόστους υλοποίησης. Τα βασικότερα πεδία που συναντάμε στις κλάσεις του RMI φαίνονται στον πίνακα \ref{tab:HL7_V3_RMI_fields}.
+	\begin{table}[h]
+		\begin{center}
+		    \begin{tabular}{|c|l|}
+		    \hline
+		    \rowcolor{grayy}
+		    \textbf{Πεδίο} & \textbf{Λειτουργία}
+		    \\ \hline
+		     id & Ταυτοποίηση κάθε αντικειμένου (instance identifier)
+		     \\ \hline
+		     classCode & Εξειδίκευση της κλάσης βάσει ορισμών του HL7 V3
+		     \\ \hline
+		     code & Περιέχει το σχήμα κωδικοποίησης
+		     \\ \hline
+		     statusCode & Δείχνει την τρέχουσα κατάσταση του αντικειμένου
+		     \\ \hline
+		    \end{tabular}
+		    \caption{Βασικά πεδία κλάσεων του μοντέλου RIM}
+			\label{tab:HL7_V3_RMI_fields}
+		\end{center}
+	\end{table}
+	
+	Οι κύριες κλάσεις του μοντέλου RIM έχουν ως εξής\cite{gunther2006hl7}:
+	\begin{itemize}
+		\item \textbf{Act: } Κάθε μία πράξη ή ενέργεια που πραγματοποιείται είναι ένα Act (δηλαδή ανήκει στην κλάση act). Αποτελεί μια κλάση που περιλαμβάνει ένα τεράστιο εύρος ενεργειών, μερικά παραδείγματα είναι τα παρακάτω:
+		\begin{itemize}
+			\item Παρατηρήσεις π.χ. ιατρικές διαγνώσεις, ευρήματα εξετάσεων
+			\item Γεγονότα π.χ. ραντεβού ασθενούς, εισαγωγή ασθενούς 
+		\end{itemize}
+		\item \textbf{ActRelationship: } Τα Acts συνδέονται μέσω της κλάσης ActRelationship.
+		\item \textbf{Participation: } Ορίζει το περιβάλλον κάποιου Act (συγγραφέας, θέμα, τοποθεσία κτλπ.)
+		\item \textbf{Entity: } Αποτελεί αναπαράσταση των φυσικών και μη οντοτήτων. Παραδείγματα οντοτήτων αποτελεί έναν ασθενής, ένας οργανισμός ή ακόμα και κάποιο νοσοκομείο.
+		\item \textbf{Role: } Χρησιμοποιείται για να περιγράψει τους ρόλους που έχουν οι οντότητες σε κάποιο Act.
+		\item \textbf{RoleLink: } Δείχνει τη σχέση που έχουν οι διάφοροι ρόλοι (Roles) μεταξύ τους.
+	\end{itemize}
+	Για να γίνουν πιο εύκολα κατανοητές οι παραπάνω κλάσεις καθώς και ο τρόπος με τον οποίο διασυνδέονται στο σχήμα \ref{fig:RMI_class_model} βλέπουμε το διάγραμμα κλάσεων\cite{gunther2006hl7}.
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=1\textwidth]{RMI_class_model.jpg}
+	    \caption{Διάγραμμα κλάσεων του μοντέλου RMI}
+	    \label{fig:RMI_class_model}
+	\end{figure}		
+		
+	Για λόγους πληρότητας στο σχήμα \ref{fig:HL7_V3_data_types} βλέπουμε τους διάφορους τύπους δεδομένων που υποστηρίζονται από το πρωτόκολλο HL7 V3 (στο σχήμα \ref{fig:HL7_V2_data_types} μπορείτε να δείτε τους τύπους για την έκδοση 2)
+\newpage
+	\begin{figure}[H]
+	    \centering
+	    \includegraphics[width=1\textwidth]{HL7_V3_data_types.jpg}
+	    \caption{Τύποι δεδομένων του προτύπου HL7 V3}
+	    \label{fig:HL7_V3_data_types}
+	\end{figure}
+\newpage		
 	\subsection{CDA Documents}
 	
 
