--- a/references.bib
+++ b/references.bib
@@ -1107,6 +1107,26 @@ Timothy Grance},
   Timestamp                = {2015.10.04}
 }
 
+@Electronic{HL7RIM,
+  Title                    = {HL7 Version 3: Reference Information Model (RIM)},
+  Author                   = {HL7},
+  Organization             = {Health Level Seven International},
+  Url                      = {http://www.hl7.org/implement/standards/product_brief.cfm?product_id=77},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.20}
+}
+
+@Electronic{HL7V3ProductSuite,
+  Title                    = {HL7 Version 3 Product Suite},
+  Author                   = {HL7},
+  Organization             = {Health Level Seven International},
+  Url                      = {https://www.hl7.org/implement/standards/product_brief.cfm?product_id=186},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.20}
+}
+
 @Electronic{HL7Version27,
   Title                    = {HL7 Messaging Standard Version 2.7},
   Author                   = {HL7},
@@ -2103,3 +2123,12 @@ URN: urn:nbn:de:0114-fqs0501297},
   Date-modified            = {2015-10-03 18:50:17 +0000}
 }
 
+@inproceedings{gunther2006hl7,
+  title={The HL7 reference information model under scrutiny},
+  author={Gunther SCHADOW, Charles N MEAD},
+  booktitle={Ubiquity: technologies for better health in aging societies: proceedings of MIE2006},
+  volume={124},
+  pages={151},
+  year={2006},
+  organization={IOS Press}
+}
